--- a/controlCenter/src/app/dashboard/dashboard.component.html
+++ b/controlCenter/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
-<div fxLayout="row" fxLayoutWrap style="padding:10px;">
-  <mat-card fxFlex="30" style="margin:15px;" *ngFor="let option of options" matRipple>
-    <mat-card-title><mat-icon>{{option.icon}}</mat-icon> {{option.title}}</mat-card-title>
-  </mat-card>
-</div>
+<mat-toolbar color="primary">
+  <button *ngIf="!navigation.isRootLevel" (click)="upLevel.next()" mat-icon-button><mat-icon>keyboard_arrow_left</mat-icon></button>
+  <span>Control Center</span>
+</mat-toolbar>
+<app-option-list [options]="commands" (commandSelected)="commandSelected($event)" (levelChanged)="levelChanged($event)" [levelUp]="upLevel"></app-option-list>
