--- a/controlCenter/src/app/dashboard/dashboard.component.html
+++ b/controlCenter/src/app/dashboard/dashboard.component.html
@@ -2,4 +2,11 @@
   <button *ngIf="!isRootLevel" (click)="upLevel.next()" mat-icon-button><mat-icon>keyboard_arrow_left</mat-icon></button>
   <span>Control Center</span>
 </mat-toolbar>
-<app-option-list [options]="commands" (commandSelected)="commandSelected($event)" (levelChanged)="levelChanged($event)" [levelUp]="upLevel"></app-option-list>
+<mat-tab-group mat-stretch-tabs backgroundColor="primary">
+  <mat-tab label="Commands">
+    <app-option-list [options]="commands" (commandSelected)="commandSelected($event)" (levelChanged)="levelChanged($event)" [levelUp]="upLevel"></app-option-list>
+  </mat-tab>
+  <mat-tab label="Status">
+    <app-status-list [status]="status"></app-status-list>
+  </mat-tab>
+</mat-tab-group>
