--- a/controlCenter/src/app/status/status-list/status-list.component.html
+++ b/controlCenter/src/app/status/status-list/status-list.component.html
@@ -1,10 +1,34 @@
 <div fxLayout="row" fxLayoutWrap style="padding:10px;">
-  <mat-card *ngFor="let state of info" fxFlex.gt-sm="30%" fxFlex="100%" style="margin:15px;">
+  <mat-card *ngFor="let status of _status" fxFlex.gt-sm="30%" fxFlex="100%" style="margin:15px;">
     <mat-card-header>
-      <mat-card-title>{{state.key}}</mat-card-title>
+      <mat-card-title>{{status.title}}</mat-card-title>
     </mat-card-header>
-    <mat-card-content>
-      {{state.value | json}}
+    <mat-card-content fxLayout="row" fxLayoutWrap style="padding:10px;">
+      <mat-card [style.background]="'#676767'" *ngFor="let info of status.info" style="margin:15px;" fxFlex="100%">
+        <mat-card-header>
+          <mat-card-title>{{info.title}}</mat-card-title>
+        </mat-card-header>
+        <mat-card-content fxLayout="row" fxLayoutAlign="center center">
+          <div fxFlex *ngFor="let field of info.fields" fxLayoutAlign="center center">
+            <mat-progress-spinner *ngIf="field.type === 'progressCircle'"
+                                  [color]="'primary'"
+                                  [mode]="'determinate'"
+                                  [value]="field.value">
+            </mat-progress-spinner>
+            <div *ngIf="field.type === 'icon'">
+              <mat-icon *ngIf="field.value">{{field.positiveResult}}</mat-icon>
+              <mat-icon *ngIf="!field.value">{{field.negativeResult}}</mat-icon>
+            </div>
+            <div *ngIf="field.type === 'json'" fxFlex>
+              <mat-form-field fxFlex>
+                <textarea matInput>
+                  {{field.value | json}}
+                </textarea>
+              </mat-form-field>
+            </div>
+          </div>
+        </mat-card-content>
+      </mat-card>
     </mat-card-content>
   </mat-card>
 </div>
